--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
 		<module>modules/agent</module>
 		<module>modules/server</module>
 		<module>modules/common</module>
+		<module>modules/sub-plugin/webhook</module>
 	</modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
