--- a/modules/server/pom.xml
+++ b/modules/server/pom.xml
@@ -17,10 +17,15 @@
 	</properties>
 	<dependencies>
 
-
 		<dependency>
 			<groupId>io.jpom</groupId>
 			<artifactId>common</artifactId>
+			<version>${pom.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.jpom.plugin</groupId>
+			<artifactId>webhook</artifactId>
 			<version>${pom.version}</version>
 		</dependency>
 
@@ -133,6 +138,7 @@
 							<fork>true</fork>
 							<mainClass>${start-class}</mainClass>
 							<jvmArguments>-Dfile.encoding=UTF-8</jvmArguments>
+							<excludeGroupIds>io.jpom.plugin</excludeGroupIds>
 						</configuration>
 						<executions>
 							<execution>
