--- a/modules/sub-plugin/webhook/pom.xml
+++ b/modules/sub-plugin/webhook/pom.xml
@@ -11,7 +11,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>io.jpom.plugin</groupId>
 	<artifactId>webhook</artifactId>
-
+	<name>plugin-webhook</name>
 	<properties>
 
 	</properties>
