--- a/modules/sub-plugin/email/pom.xml
+++ b/modules/sub-plugin/email/pom.xml
@@ -36,6 +36,29 @@
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>3.1.1</version>
+				<configuration>
+					<archive>
+						<manifest>
+							<!-- 是否指定项目classpath下的依赖 -->
+							<addClasspath>true</addClasspath>
+							<!-- 指定依赖的时候声明前缀 -->
+							<classpathPrefix>./</classpathPrefix>
+						</manifest>
+						<manifestEntries>
+							<!-- 项目版本号 -->
+							<Jpom-Project-Version>${project.version}</Jpom-Project-Version>
+							<!-- 打包时间 -->
+							<Jpom-Timestamp>${maven.build.timestamp}</Jpom-Timestamp>
+							<Jpom-Type>${project.artifactId}</Jpom-Type>
+							<Implementation-URL>https://gitee.com/dromara/Jpom</Implementation-URL>
+						</manifestEntries>
+					</archive>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<configuration>
 					<archive>
