--- a/modules/sub-plugin/email/pom.xml
+++ b/modules/sub-plugin/email/pom.xml
@@ -21,6 +21,7 @@
 		<dependency>
 			<groupId>io.jpom</groupId>
 			<artifactId>common</artifactId>
+			<scope>provided</scope>
 			<version>${pom.version}</version>
 		</dependency>
 
