--- a/modules/sub-plugin/svn-clone/pom.xml
+++ b/modules/sub-plugin/svn-clone/pom.xml
@@ -10,18 +10,26 @@
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>io.jpom.plugin</groupId>
-	<artifactId>webhook</artifactId>
-	<name>plugin-webhook</name>
+	<artifactId>svn-clone</artifactId>
+	<name>plugin-svn-clone</name>
 	<properties>
-
+		<maven.compiler.source>8</maven.compiler.source>
+		<maven.compiler.target>8</maven.compiler.target>
 	</properties>
 
 	<dependencies>
+
 		<dependency>
 			<groupId>io.jpom</groupId>
 			<artifactId>common</artifactId>
 			<scope>provided</scope>
 			<version>${pom.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.tmatesoft.svnkit</groupId>
+			<artifactId>svnkit</artifactId>
+			<version>1.10.3</version>
 		</dependency>
 	</dependencies>
 
@@ -49,6 +57,33 @@
 						</manifestEntries>
 					</archive>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifest>
+							<!--这里要替换成jar包main方法所在类 -->
+						</manifest>
+					</archive>
+					<appendAssemblyId>false</appendAssemblyId>
+					<descriptors>
+						<descriptor>script/release.xml</descriptor>
+					</descriptors>
+
+				</configuration>
+
+				<executions>
+
+					<execution>
+						<id>make-assembly</id> <!-- this is used for inheritance merges -->
+						<phase>package</phase> <!-- 指定在打包节点执行jar包合并操作 -->
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
