新增配置属性 `system.timerMatchSecond` 调度(定时任务)是否开启秒级匹配

--- a/modules/agent/src/main/resources/bin/extConfig.yml
+++ b/modules/agent/src/main/resources/bin/extConfig.yml
@@ -42,3 +42,6 @@ project:
   disableVirtualMachine: false
   # 停止项目等待的时长 单位秒
   stopWaitTime: 10
+system:
+  # cron 定时器是否开启匹配秒
+  timerMatchSecond: false
