--- a/modules/sub-plugin/webhook/pom.xml
+++ b/modules/sub-plugin/webhook/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath>../../../pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>io.jpom.plugin</groupId>
+	<groupId>io.jpom.plugins</groupId>
 	<artifactId>webhook</artifactId>
 	<name>plugin-webhook</name>
 	<properties>
