--- a/modules/server/pom.xml
+++ b/modules/server/pom.xml
@@ -24,7 +24,7 @@
 		</dependency>
 
 		<dependency>
-			<groupId>io.jpom.plugin</groupId>
+			<groupId>io.jpom.plugins</groupId>
 			<artifactId>webhook</artifactId>
 			<version>${pom.version}</version>
 		</dependency>
@@ -55,14 +55,14 @@
 		</dependency>
 
 		<dependency>
-			<groupId>io.jpom.plugin</groupId>
+			<groupId>io.jpom.plugins</groupId>
 			<artifactId>svn-clone</artifactId>
 			<version>${pom.version}</version>
 		</dependency>
 
 		<!--邮件-->
 		<dependency>
-			<groupId>io.jpom.plugin</groupId>
+			<groupId>io.jpom.plugins</groupId>
 			<artifactId>email</artifactId>
 			<version>${pom.version}</version>
 		</dependency>
@@ -138,7 +138,7 @@
 							<fork>true</fork>
 							<mainClass>${start-class}</mainClass>
 							<jvmArguments>-Dfile.encoding=UTF-8</jvmArguments>
-							<!--	<excludeGroupIds>io.jpom.plugin</excludeGroupIds>-->
+							<!--	<excludeGroupIds>io.jpom.plugins</excludeGroupIds>-->
 						</configuration>
 						<executions>
 							<execution>
