--- a/modules/agent/pom.xml
+++ b/modules/agent/pom.xml
@@ -43,6 +43,12 @@
 			<artifactId>webhook</artifactId>
 			<version>${pom.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>io.jpom.plugins</groupId>
+			<artifactId>auto-charset-jchardet</artifactId>
+			<version>${pom.version}</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
