vue ssh 修改目录、ssh 文件管理支持上传压缩包

--- a/modules/common/pom.xml
+++ b/modules/common/pom.xml
@@ -44,6 +44,12 @@
 			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-compress</artifactId>
+			<version>1.21</version>
+		</dependency>
+
 	</dependencies>
 
 	<profiles>
