--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -1,9 +1,22 @@
 FROM maven:3.8.4-jdk-8-slim as builder
 WORKDIR /target/dependency
 COPY . .
-
-RUN curl -Lso /opt/node-v16.13.1-linux-x64.tar.gz https://npmmirror.com/mirrors/node/v16.13.1/node-v16.13.1-linux-x64.tar.gz \
-    && tar -zxvf /opt/node-v16.13.1-linux-x64.tar.gz -C /opt/ && export PATH=/opt/node-v16.13.1-linux-x64/bin:$PATH \
+RUN set -eux; \
+    ARCH="$(dpkg --print-architecture)"; \
+    case "${ARCH}" in \
+       aarch64|arm64) \
+         BINARY_ARCH='arm64'; \
+         ;; \
+       amd64|x86_64) \
+         BINARY_ARCH='x64'; \
+         ;; \
+       *) \
+         echo "Unsupported arch: ${ARCH}"; \
+         exit 1; \
+         ;; \
+    esac; \
+    curl -LfsSo /opt/node-v16.13.1-linux-${BINARY_ARCH}.tar.gz https://npmmirror.com/mirrors/node/v16.13.1/node-v16.13.1-linux-${BINARY_ARCH}.tar.gz \
+    && tar -zxvf /opt/node-v16.13.1-linux-${BINARY_ARCH}.tar.gz -C /opt/ && export PATH=/opt/node-v16.13.1-linux-${BINARY_ARCH}/bin:$PATH \
     && npm config set registry https://registry.npmmirror.com \
     && cd web-vue && npm install && npm run build
 
