--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -22,7 +22,7 @@ RUN set -eux; \
 
 RUN mvn -B -e -T 1C clean package -pl modules/server -am -Dmaven.test.skip=true -Dmaven.compile.fork=true -s script/settings.xml
 
-FROM maven:3.8.4-jdk-8-slim
+FROM maven:3.8.4-jdk-8
 ENV JPOM_HOME   /usr/local/jpom-server
 ARG JPOM_VERSION
 ENV JPOM_PKG    server-${JPOM_VERSION}-release
