--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,5 +15,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Build the Docker image
-      - run: docker buildx build --platform linux/amd64,linux/arm64 -t jpomdocker/jpom:2.8.4 -f ./modules/server/DockerfileRelease --push .
-      - run: docker buildx build --platform linux/amd64,linux/arm64 -t jpomdocker/jpom:latest -f ./modules/server/DockerfileRelease --push .
+        run: |
+          docker buildx build --platform linux/amd64,linux/arm64 -t jpomdocker/jpom:2.8.4 -f ./modules/server/DockerfileRelease --push .
+          docker buildx build --platform linux/amd64,linux/arm64 -t jpomdocker/jpom:latest -f ./modules/server/DockerfileRelease --push .
