github push docker image

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,5 +16,6 @@ jobs:
       - uses: actions/checkout@v2
       - name: Build the Docker image
         run: |
+          docker buildx create --use
           docker buildx build --platform linux/amd64,linux/arm64 -t jpomdocker/jpom:2.8.4 -f ./modules/server/DockerfileRelease --push .
           docker buildx build --platform linux/amd64,linux/arm64 -t jpomdocker/jpom:latest -f ./modules/server/DockerfileRelease --push .
