--- a/modules/server/DockerfileRelease
+++ b/modules/server/DockerfileRelease
@@ -30,7 +30,7 @@ WORKDIR $JPOM_HOME
 
 RUN mkdir -p $JPOM_HOME && \
     curl -LfSo $JPOM_HOME/$JPOM_PKG https://jpom-releases.oss-cn-hangzhou.aliyuncs.com/$JPOM_PKG && \
-    tar -zxvf $JPOM_HOME/$JPOM_PKG -C $JPOM_HOME && \
+    tar -xvf $JPOM_HOME/$JPOM_PKG -C $JPOM_HOME && \
     rm -rf $JPOM_HOME/$JPOM_PKG
 
 VOLUME $JPOM_HOME
