--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 		<module>modules/sub-plugin/svn-clone</module>
 		<module>modules/sub-plugin/maven-plugin</module>
 		<module>modules/sub-plugin/auto-charset-jchardet</module>
+		<module>modules/sub-plugin/db-h2</module>
 	</modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
