--- a/modules/sub-plugin/db-h2/pom.xml
+++ b/modules/sub-plugin/db-h2/pom.xml
@@ -21,6 +21,14 @@
 	</properties>
 
 	<dependencies>
+
+		<dependency>
+			<groupId>io.jpom</groupId>
+			<artifactId>common</artifactId>
+			<scope>provided</scope>
+			<version>${pom.version}</version>
+		</dependency>
+
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
