--- a/web-vue/package.json
+++ b/web-vue/package.json
@@ -19,6 +19,7 @@
     "qs": "^6.9.4",
     "sha1": "^1.1.1",
     "vue": "^2.6.14",
+    "vue-clipboard2": "^0.3.3",
     "vue-codemirror": "^4.0.6",
     "vue-json-viewer": "^2.2.20",
     "vue-router": "^3.5.2",
