--- a/modules/server/src/main/resources/bin/extConfig.yml
+++ b/modules/server/src/main/resources/bin/extConfig.yml
@@ -80,5 +80,7 @@ node:
 system:
   # cron 定时器是否开启匹配秒
   timerMatchSecond: false
+  # 节点心跳监控时间 （需要大于零） 单位秒
+  nodeHeartSecond: 30
   # 旧包文件保留个数
   oldJarsCount: 2
