--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,8 @@
 		<module>modules/sub-plugin/maven-plugin</module>
 		<module>modules/sub-plugin/auto-charset-jchardet</module>
 		<module>modules/sub-plugin/db-h2</module>
-	</modules>
+        <module>modules/sub-plugin/docker-cli</module>
+    </modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
