--- a/modules/sub-plugin/docker-cli/pom.xml
+++ b/modules/sub-plugin/docker-cli/pom.xml
@@ -6,6 +6,7 @@
 		<artifactId>jpom-parent</artifactId>
 		<groupId>io.jpom</groupId>
 		<version>2.8.7</version>
+		<relativePath>../../../pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>io.jpom.plugins</groupId>
