pre docker info

--- a/modules/agent/pom.xml
+++ b/modules/agent/pom.xml
@@ -19,7 +19,7 @@
 		<dependency>
 			<groupId>io.jpom</groupId>
 			<artifactId>common</artifactId>
-			<version>${pom.version}</version>
+			<version>${project.version}</version>
 		</dependency>
 		<!--nginx-->
 		<dependency>
@@ -37,13 +37,13 @@
 		<dependency>
 			<groupId>io.jpom.plugins</groupId>
 			<artifactId>webhook</artifactId>
-			<version>${pom.version}</version>
+			<version>${project.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>io.jpom.plugins</groupId>
 			<artifactId>auto-charset-jchardet</artifactId>
-			<version>${pom.version}</version>
+			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
 	<build>
