--- a/modules/sub-plugin/auto-charset-jchardet/pom.xml
+++ b/modules/sub-plugin/auto-charset-jchardet/pom.xml
@@ -30,7 +30,7 @@
 			<groupId>io.jpom</groupId>
 			<artifactId>common</artifactId>
 			<scope>provided</scope>
-			<version>${pom.version}</version>
+			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
 
