--- a/modules/sub-plugin/email/pom.xml
+++ b/modules/sub-plugin/email/pom.xml
@@ -22,7 +22,7 @@
 			<groupId>io.jpom</groupId>
 			<artifactId>common</artifactId>
 			<scope>provided</scope>
-			<version>${pom.version}</version>
+			<version>${project.version}</version>
 		</dependency>
 
 		<!--邮件-->
