超级管理员开启 mfa 两步验证

--- a/web-vue/package.json
+++ b/web-vue/package.json
@@ -16,6 +16,7 @@
     "intro.js": "^3.4.0",
     "jshint": "^2.13.1",
     "markdown-it-vue": "^1.1.6",
+    "qrcodejs2": "^0.0.2",
     "qs": "^6.9.4",
     "sha1": "^1.1.1",
     "vue": "^2.6.14",
