--- a/web-vue/package.json
+++ b/web-vue/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve  --mode dev",
-    "build": "vue-cli-service build --mode pro",
+    "build": "vue-cli-service build --mode production",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
