--- a/modules/server/DockerfileRelease
+++ b/modules/server/DockerfileRelease
@@ -26,14 +26,17 @@ FROM maven:3.8.4-jdk-8
 ENV JPOM_HOME	/usr/local/jpom-server
 ENV JPOM_PKG	server-2.8.8-release.tar.gz
 
+ENV JPOM_DATA_PATH ${JPOM_HOME}/data
+ENV JPOM_LOG_PATH ${JPOM_HOME}/log
+# 数据目录
+ENV jpom.path ${JPOM_DATA_PATH}
+
 WORKDIR $JPOM_HOME
 
 RUN mkdir -p $JPOM_HOME && \
     curl -LfSo $JPOM_HOME/$JPOM_PKG https://jpom-releases.oss-cn-hangzhou.aliyuncs.com/$JPOM_PKG && \
     tar -zxvf $JPOM_HOME/$JPOM_PKG -C $JPOM_HOME && \
     rm -rf $JPOM_HOME/$JPOM_PKG
-
-VOLUME $JPOM_HOME
 
 EXPOSE 2122
 
