--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,8 +14,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Build the Docker image
-        run: |
-          docker buildx create --use
-          docker buildx build --platform linux/amd64,linux/arm64 -t jpomdocker/jpom:2.8.12 -f ./modules/server/DockerfileRelease --push .
-          docker buildx build --platform linux/amd64,linux/arm64 -t jpomdocker/jpom:latest -f ./modules/server/DockerfileRelease --push .
+      - name: Set up JDK 8
+        uses: actions/setup-java@v2
+        with:
+          java-version: '8'
+          cache: maven
+      - name: Build with Maven
+        run: mvn -B package
+#        run: |
+#          docker buildx create --use
+#          docker buildx build --platform linux/amd64,linux/arm64 -t jpomdocker/jpom:2.8.12 -f ./modules/server/DockerfileRelease --push .
+#          docker buildx build --platform linux/amd64,linux/arm64 -t jpomdocker/jpom:latest -f ./modules/server/DockerfileRelease --push .
